migrate to 0.9 source, compile by jdk9 with level 1.8, fix bug in jdk9 of JavaCompile needs classpath options