@@ -2,6 +2,7 @@ package com.greenpineyu.fel.compile;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
@@ -36,17 +37,12 @@ public class FelCompiler16<T> implements FelCompiler {
 	public FelCompiler16() {
 		compiler = ToolProvider.getSystemJavaCompiler();
 
-		if (compiler == null) {
-			throw new IllegalStateException(
-					"Cannot find the system Java compiler. "
-							+ "Check that your class path includes tools.jar");
-		}
+		if (compiler == null) throw new IllegalStateException("Cannot find the system Java compiler. "
+				+ "Check that your class path includes tools.jar");
 
-		this.classLoader = new FelCompilerClassloader(this.getClass()
-				.getClassLoader());
+		this.classLoader = new FelCompilerClassloader(this.getClass().getClassLoader());
 		diagnostics = new DiagnosticCollector<JavaFileObject>();
-		final StandardJavaFileManager fileManager = compiler
-				.getStandardFileManager(diagnostics, null, null);
+		final StandardJavaFileManager fileManager = compiler.getStandardFileManager(diagnostics, null, null);
 
 		ClassLoader loader = this.classLoader.getParent();
 		List<String> paths = CompileService.getClassPath(loader);
@@ -62,87 +58,61 @@ public class FelCompiler16<T> implements FelCompiler {
 			e.printStackTrace();
 		}
 
-		/*
-		
-		
-		if (loader instanceof URLClassLoader
-				&& (!loader.getClass().getName()
-						.equals("sun.misc.Launcher$AppClassLoader"))) {
-			System.out.println("..............................asdfasdf......................");
-			try {
-				URLClassLoader urlClassLoader = (URLClassLoader) loader;
-				List<File> path = new ArrayList<File>();
-				for (URL url : urlClassLoader.getURLs()) {
-					File file = new File(url.getFile());
-					path.add(file);
-				}
-				fileManager.setLocation(StandardLocation.CLASS_PATH, path);
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		} else {
-			Enumeration<URL> resources = null;
-			try {
-				resources = loader.getResources("/");
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-			if (resources != null) {
-				List<File> path = new ArrayList<File>();
-				while (resources.hasMoreElements()) {
-					URL resource = resources.nextElement();
-					File file = new File(resource.getFile());
-					path.add(file);
-				}
-			}
-
-		}*/
-
-		javaFileManager = new ForwardingJavaFileManager<JavaFileManager>(
-				fileManager) {
-			 @Override
-			 public JavaFileObject getJavaFileForOutput(Location location,
-					String qualifiedName, Kind kind, FileObject outputFile)
-			 throws IOException {
+		javaFileManager = new ForwardingJavaFileManager<JavaFileManager>(fileManager) {
+			@Override
+			public JavaFileObject getJavaFileForOutput(Location location, String qualifiedName, Kind kind, FileObject outputFile)
+					throws IOException {
 				// 由于编译成功后的bytecode需要放到file中，所以需要将file放到classloader中，以便读取bytecode生成Class对象.
 				classLoader.add(qualifiedName, outputFile);
 				return (JavaFileObject) outputFile;
-			 }
+			}
 		};
-		this.options = new ArrayList<String>();
-		// this.options.add("-O");
+		this.options = options();
 	}
 
-	public Expression compile(JavaSource src) {
+	private List<String> options() {
+		final List<String> options = new ArrayList<String>();
+		options.add("-classpath");
+		final StringBuilder builder = new StringBuilder();
 
+		String cp;
+		cp = System.getProperty("java.class.path");
+		if (null != cp) builder.append(cp).append(File.pathSeparator);
+		cp = System.getProperty("sun.boot.class.path", "");
+		if (null != cp) builder.append(cp).append(File.pathSeparator);
+		// final URLClassLoader urlClassLoader = (URLClassLoader) ClassLoaderResolver.getClassLoader();
+		// for (final URL url : urlClassLoader.getURLs()) {
+		// builder.append(url.getFile()).append(File.pathSeparator);
+		// }
+		final int lastIndexOfColon = builder.lastIndexOf(File.pathSeparator);
+		builder.replace(lastIndexOfColon, lastIndexOfColon + 1, "");
+		options.add(builder.toString());
+		// this.options.add("-O");
+		return options;
+	}
+
+	@Override
+	public Expression compile(JavaSource src) {
 		Class<T> compile = compileToClass(src);
 		try {
-			return (Expression) compile.newInstance();
-		} catch (InstantiationException e) {
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
+			return (Expression) compile.getConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+				| NoSuchMethodException | SecurityException e) {
 			e.printStackTrace();
 		}
 		return null;
 	}
 
-
 	public synchronized Class<T> compileToClass(final JavaSource src) {
 		List<JavaFileObject> compileSrcs = new ArrayList<JavaFileObject>();
 		String className = src.getSimpleName();
-		final FelJavaFileObject compileSrc = new FelJavaFileObject(className,
-				src.getSource());
+		final FelJavaFileObject compileSrc = new FelJavaFileObject(className, src.getSource());
 		compileSrcs.add(compileSrc);
-		final CompilationTask task = compiler.getTask(null, javaFileManager,
-				diagnostics, options, null, compileSrcs);
+		final CompilationTask task = compiler.getTask(null, javaFileManager, diagnostics, options, null, compileSrcs);
 		final Boolean result = task.call();
-		if (result == null || !result.booleanValue()) {
-			// diagnostics.
+		if (result == null || !result.booleanValue())
 			// 编译失败
-			// diagnostics.getDiagnostics()
-			throw new CompileException(src.getSource() + "\n"
-					+ diagnostics.getDiagnostics().toString());
-		}
+			throw new CompileException(src.getSource() + "\n" + diagnostics.getDiagnostics().toString());
 		try {
 			return loadClass(src.getName());
 		} catch (ClassNotFoundException e) {
@@ -152,8 +122,7 @@ public class FelCompiler16<T> implements FelCompiler {
 	}
 
 	@SuppressWarnings("unchecked")
-	public Class<T> loadClass(final String qualifiedClassName)
-			throws ClassNotFoundException {
+	public Class<T> loadClass(final String qualifiedClassName) throws ClassNotFoundException {
 		return (Class<T>) classLoader.loadClass(qualifiedClassName);
 	}
 
@@ -166,4 +135,3 @@ public class FelCompiler16<T> implements FelCompiler {
 	}
 
 }
-
